--- a/animals-lb.yaml
+++ b/animals-lb.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: frontend
+  name: bear
   labels:
     app: ui
     tier: frontend
@@ -25,7 +25,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: frontend
+  name: moose
   labels:
     app: ui
     tier: frontend
